# pystesh

./: .gitignore  .pre-commit-config.yaml  get_edges.py  pyproject.toml
src/: delaunay.py  get_edges.py  get_mesh.py  triangle_example.py  utils.py
src/cdt/: delaunay.py  test.py
src/faces/: cone.py  cylinder.py  get_edges.py  utils.py
tests/: test_get_edges.py
