[project]
name = "pystesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cadquery-ocp>=7.8.1.1.post1",
    "triangle>=20250106",
]

[tool.uv]
dev-dependencies = [
    "cadquery-ocp-stubs>=7.8.1.1.post1",
    "polyscope>=2.3.0",
    "pytest>=8.3.4",
]
